--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "element-ui": "^2.13.0",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
