--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "element-ui": "^2.13.0",
+    "lodash": "^4.17.15",
     "vue": "^2.5.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
