--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^4.6.0",
     "element-ui": "^2.13.0",
     "lodash": "^4.17.15",
     "vue": "^2.5.2",
