--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "echarts": "^4.6.0",
     "element-ui": "^2.13.0",
     "lodash": "^4.17.15",
+    "nprogress": "^0.2.0",
     "vue": "^2.5.2",
     "vue-quill-editor": "^3.0.6",
     "vue-table-with-tree-grid": "^0.2.4"
